--- a/.github/workflows/physionet-build-test.yml
+++ b/.github/workflows/physionet-build-test.yml
@@ -35,7 +35,9 @@ jobs:
           virtualenv -p python3.7 $VIRTUAL_ENV
           echo "$VIRTUAL_ENV/bin" >> $GITHUB_PATH
           source $VIRTUAL_ENV/bin/activate
-          pip3 install -r requirements.txt
+          pip3 install poetry
+          poetry config virtualenvs.create false
+          poetry install --no-root
       - name: install libseccomp-dev for syscall filtering
         run: |
           apt-get install libseccomp-dev
