Fix warnings about development environment

--- a/.github/workflows/physionet-build-test.yml
+++ b/.github/workflows/physionet-build-test.yml
@@ -27,6 +27,7 @@ jobs:
           --health-retries 5
     env:
       DJANGO_SETTINGS_MODULE: physionet.settings.settings
+      ENVIRONMENT: development
       SECRET_KEY: asdf
       ALLOWED_HOSTS: localhost
       DB_USER: physionet
