--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,6 +8,7 @@ services:
       - db
     environment:
       - DJANGO_SETTINGS_MODULE=physionet.settings.settings
+      - ENVIRONMENT=development
       - SECRET_KEY=asdf
       - ALLOWED_HOSTS=localhost
       - DB_USER=physionet
