Update docker-compose config to set some more variables and Dockerfile to install zip package

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -24,6 +24,8 @@ services:
       - ADMINS_NAME=PhysioNet Technical
       - ADMINS_MAIL=technical@dev.physionet.org
       - OCRID_REDIRECT_URI=http://127.0.0.1:8000/authorcid
+      - DATACITE_API_URL=https://api.test.datacite.org/dois
+      - DATACITE_PREFIX=
       - MEDIA_ROOT=/code/media
       - STATIC_ROOT=/data/pn-static
     stdin_open: true
