Add more info about s3 config

--- a/.env.example
+++ b/.env.example
@@ -62,3 +62,9 @@ ORCID_SCOPE='/read-limited,/activities/update'
 ORCID_TEST_CLIENT_ID=SECRET
 ORCID_TEST_CLIENT_SECRET=SECRET
 ORCID_TEST_SCOPE='/authenticate'
+
+STORAGE_TYPE=LOCAL
+
+AWS_ACCESS_KEY_ID=
+AWS_SECRET_ACCESS_KEY=
+AWS_STORAGE_BUCKET_NAME=
