Add more info about s3 config

--- a/.env.example
+++ b/.env.example
@@ -76,3 +76,9 @@ ORCID_REDIRECT_URI=http://localhost:8000/authorcid
 ORCID_CLIENT_ID=SECRET
 ORCID_CLIENT_SECRET=SECRET
 ORCID_SCOPE='/read-limited,/activities/update'
+
+STORAGE_TYPE=LOCAL
+
+AWS_ACCESS_KEY_ID=
+AWS_SECRET_ACCESS_KEY=
+AWS_STORAGE_BUCKET_NAME=
