--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,10 +22,12 @@ zxcvbn-python = "^4.4.18"
 oauth2client = "^4.1.3"
 pyOpenSSL = "^19.0.0"
 google-api-python-client = "^1.7.9"
-psycopg2-binary = "~2.8.6"
+psycopg2-binary = "2.8.6"
 httplib2 = "^0.19.0"
 oauthlib = "^3.1.0"
 requests-oauthlib = "^1.3.0"
+django-storages = "^1.11.1"
+boto3 = "^1.17.103"
 
 [tool.poetry.dev-dependencies]
 coverage = "^4.4.2"
