--- a/pyproject.toml
+++ b/pyproject.toml
@@ -27,6 +27,7 @@ oauthlib = "^3.1.0"
 requests-oauthlib = "^1.3.0"
 sentry-sdk = "^1.4.3"
 python-json-logger = "^2.0.2"
+django-storages = "^1.11.1"
 
 [tool.poetry.dev-dependencies]
 coverage = "^4.4.2"
