Add bucket names

--- a/.env.example
+++ b/.env.example
@@ -81,4 +81,5 @@ STORAGE_TYPE=LOCAL
 
 AWS_ACCESS_KEY_ID=
 AWS_SECRET_ACCESS_KEY=
-AWS_STORAGE_BUCKET_NAME=
+AWS_MEDIA_BUCKET_NAME=
+AWS_STATIC_BUCKET_NAME=
