--- a/.github/workflows/physionet-build-test.yml
+++ b/.github/workflows/physionet-build-test.yml
@@ -14,7 +14,25 @@ jobs:
     runs-on: ubuntu-latest
     container: debian:10
     env:
-      DJANGO_SETTINGS_MODULE: physionet.settings.development.pgsql
+      DJANGO_SETTINGS_MODULE: physionet.settings.settings
+      ENVIRONMENT: development
+      SECRET_KEY: asdf
+      ALLOWED_HOSTS: localhost
+      DB_USER: physionet
+      DB_NAME: physionet
+      DB_PASSWORD: password
+      DB_HOST: localhost
+      DEBUG: True
+      SITE_ID: 4
+      EMAIL_HOST: localhost
+      DEFAULT_FROM_EMAIL: localhost@localhost
+      CONTACT_EMAIL: 'PhysioNet Contact <contact@dev.physionet.org>'
+      SERVER_EMAIL: 'PhysioNet System <root@dev.physionet.org>'
+      ADMINS_NAME: PhysioNet Technical
+      ADMINS_MAIL: technical@dev.physionet.org
+      ORCID_REDIRECT_URI: http://127.0.0.1:8000/authorcid
+      DATACITE_API_URL: https://api.test.datacite.org/dois
+      DATACITE_PREFIX:
     defaults:
       run:
         shell: bash
@@ -27,7 +45,6 @@ jobs:
       - name: install and configure needed software
         run: |
           apt-get install sudo python3-dev python3-pip build-essential postgresql zip wget python-virtualenv --yes
-          ln -sT .env.example .env
       - name: install repo dependencies
         # add virtual env path to github_path so each run: process will see it
         run: |
