--- a/.github/workflows/physionet-build-test.yml
+++ b/.github/workflows/physionet-build-test.yml
@@ -10,84 +10,17 @@ on:
       - dev
 
 jobs:
-  container:
+  test:
     runs-on: ubuntu-latest
-    container: debian:10
-    env:
-      DJANGO_SETTINGS_MODULE: physionet.settings.settings
-      ENVIRONMENT: development
-      SECRET_KEY: asdf
-      ALLOWED_HOSTS: localhost
-      DB_USER: physionet
-      DB_NAME: physionet
-      DB_PASSWORD: password
-      DB_HOST: localhost
-      DEBUG: True
-      SITE_ID: 4
-      EMAIL_HOST: localhost
-      DEFAULT_FROM_EMAIL: localhost@localhost
-      CONTACT_EMAIL: 'PhysioNet Contact <contact@dev.physionet.org>'
-      SERVER_EMAIL: 'PhysioNet System <root@dev.physionet.org>'
-      ADMINS_NAME: PhysioNet Technical
-      ADMINS_MAIL: technical@dev.physionet.org
-      ORCID_REDIRECT_URI: http://127.0.0.1:8000/authorcid
-      DATACITE_API_URL: https://api.test.datacite.org/dois
-      DATACITE_PREFIX:
-    defaults:
-      run:
-        shell: bash
     steps:
-      - name: checkout physionet-build repo
+      - name: Checkout physionet-build repo
         uses: actions/checkout@v2
-      - name: update packages
-        run: |
-          apt-get update --yes
-      - name: install and configure needed software
-        run: |
-          apt-get install sudo python3-dev python3-pip build-essential libpq-dev postgresql zip wget python-virtualenv --yes
-      - name: install repo dependencies
-        # add virtual env path to github_path so each run: process will see it
-        run: |
-          export VIRTUAL_ENV=/env3
-          virtualenv -p python3.7 $VIRTUAL_ENV
-          echo "$VIRTUAL_ENV/bin" >> $GITHUB_PATH
-          source $VIRTUAL_ENV/bin/activate
-          pip3 install poetry
-          poetry config virtualenvs.create false
-          poetry install --no-root
-      - name: install libseccomp-dev for syscall filtering
-        run: |
-          apt-get install libseccomp-dev
-      - name: setup postgres
-        run: |
-          service postgresql start
-          sudo -u postgres psql -c "create user physionet with superuser password 'password';" -U postgres
-          sudo -u postgres psql -c "create database physionet;" -U postgres
-      - name: install and setup wfdb
-        run: |
-          wget https://github.com/bemoody/wfdb/archive/10.6.2.tar.gz -O wfdb.tar.gz
-          tar -xf wfdb.tar.gz
-          (cd wfdb-* && ./configure --without-netfiles && make -C lib install && make -C data install)
-      - name: run linker for newly installed software
-        run: |
-          ldconfig
-      - name: install and setup lightwave
-        run: |
-          wget https://github.com/bemoody/lightwave/archive/bfe908a7f53434df61fd2444bf8c235e3e6226fc.tar.gz -O lightwave.tar.gz
-          tar -xf lightwave.tar.gz
-          (cd lightwave-* && make CGIDIR=/usr/local/bin sandboxed-server)
-      - name: install web driver - geckodriver
-        run: |
-          wget https://github.com/mozilla/geckodriver/releases/download/v0.23.0/geckodriver-v0.23.0-linux64.tar.gz
-          mkdir geckodriver
-          tar -xf geckodriver-v0.23.0-linux64.tar.gz -C geckodriver
-          echo "$PWD/geckodriver" >> $GITHUB_PATH
-      - name: setup and test physionet, check amount of code tested
-        run: |
-          cd physionet-django
-          python manage.py makemigrations --dry-run --no-input --check
-          python manage.py resetdb
-          python manage.py loaddemo
-          python manage.py test --verbosity=3 --keepdb
-          coverage run --source='.' manage.py test --keepdb
-          coverage report -m
+
+      - name: Build physionet docker image
+        run: docker-compose -f docker/docker-compose.test.yml build
+
+      - name: Run tests
+        run: docker-compose -f docker/docker-compose.test.yml run --rm test
+
+      - name: Stop and remove containers
+        run: docker-compose -f docker/docker-compose.test.yml down
