--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -50,6 +50,9 @@ services:
       DB_NAME: physionet_dev
     command: ['python', '/code/physionet-django/manage.py', 'runserver', '0.0.0.0:8000']
     volumes:
+      - ./pyproject.toml:/code/pyproject.toml:rw
+      - ./poetry.lock:/code/poetry.lock:rw
+      - ./docker:/code/docker:rw
       - ./physionet-django:/code/physionet-django:rw
       - dev_data:/data:rw
     networks:
@@ -61,6 +64,9 @@ services:
       DB_NAME: physionet_test
     command: ['sleep']
     volumes:
+      - ./pyproject.toml:/code/pyproject.toml:rw
+      - ./poetry.lock:/code/poetry.lock:rw
+      - ./docker:/code/docker:rw
       - ./physionet-django:/code/physionet-django:rw
       - test_data:/data:rw
     networks:
