--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,6 +26,8 @@ psycopg2 = "~2.8.6"
 httplib2 = "^0.19.0"
 oauthlib = "^3.1.0"
 requests-oauthlib = "^1.3.0"
+celery = "^5.1.2"
+redis = "^3.5.3"
 
 [tool.poetry.dev-dependencies]
 coverage = "^4.4.2"
