--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,7 +13,7 @@ django-autocomplete-light = "^3.3.4"
 django-background-tasks = "=1.2.0"
 django-ckeditor = "^5.7.1"
 djangorestframework = "^3.11.2"
-google-cloud-storage = "^1.14.0"
+google-cloud-storage = "^1.41.1"
 html2text = "^2018.1.9"
 Pillow = "^8.1.1"
 python-decouple = "^3.1"
@@ -26,8 +26,7 @@ psycopg2 = "~2.8.6"
 httplib2 = "^0.19.0"
 oauthlib = "^3.1.0"
 requests-oauthlib = "^1.3.0"
-django-storages = "^1.11.1"
-boto3 = "^1.17.103"
+django-storages = { version = "^1.11.1", extras = ["google"] }
 
 [tool.poetry.dev-dependencies]
 coverage = "^4.4.2"
