--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,7 +13,7 @@ django-autocomplete-light = "^3.3.4"
 django-background-tasks = "=1.2.0"
 django-ckeditor = "^5.7.1"
 djangorestframework = "^3.11.2"
-google-cloud-storage = "^1.14.0"
+google-cloud-storage = "^1.41.1"
 html2text = "^2018.1.9"
 Pillow = "^8.3.2"
 python-decouple = "^3.1"
@@ -27,7 +27,7 @@ oauthlib = "^3.1.0"
 requests-oauthlib = "^1.3.0"
 sentry-sdk = "^1.4.3"
 python-json-logger = "^2.0.2"
-django-storages = "^1.11.1"
+django-storages = { version = "^1.11.1", extras = ["google"] }
 
 [tool.poetry.dev-dependencies]
 coverage = "^4.4.2"
