Update file-storage documentation

--- a/.env.example
+++ b/.env.example
@@ -79,7 +79,7 @@ ORCID_SCOPE='/read-limited,/activities/update'
 
 STORAGE_TYPE=LOCAL
 
-AWS_ACCESS_KEY_ID=
-AWS_SECRET_ACCESS_KEY=
-AWS_MEDIA_BUCKET_NAME=
-AWS_STATIC_BUCKET_NAME=
+GCP_MEDIA_BUCKET_NAME=
+GCP_STATIC_BUCKET_NAME=
+GCP_PROJECT_ID=
+GCP_BUCKET_LOCATION=
