--- a/.github/workflows/docker-build-test.yml
+++ b/.github/workflows/docker-build-test.yml
@@ -14,7 +14,7 @@ on:
   push:
     branches:
       - dev
-      - dockerhub_ci_ecs
+      - dockerhub_ci_gke
   pull_request:
     branches:
       - dev
@@ -23,6 +23,12 @@ on:
       publish_tag:
         description: 'publish_tag: if supplied it will also publish the image as physionet/physionet:<publish_tag>'
         required: false
+
+env:
+  PROJECT_ID: healthdatanexus-dev
+  GKE_CLUSTER: gke-test-1    # Add your cluster name here.
+  GKE_ZONE: us-central1   # Add your cluster zone here.
+  DEPLOYMENT_NAME: backend # Add your deployment name here.
 
 jobs:
   build:
@@ -49,11 +55,11 @@ jobs:
         run: docker-compose -f docker/docker-compose.test.yml down
 
       - name: Save physionet image
-        if: github.ref == 'refs/heads/dev' ||  github.ref == 'refs/heads/dockerhub_ci_ecs' || github.event.inputs.publish_tag
+        if: github.ref == 'refs/heads/dev' ||  github.ref == 'refs/heads/dockerhub_ci_gke' || github.event.inputs.publish_tag
         run: docker save physionet:latest | gzip > /tmp/physionet.tar.gz
 
       - name: Upload physionet image
-        if: github.ref == 'refs/heads/dev' || github.ref == 'refs/heads/dockerhub_ci_ecs' || github.event.inputs.publish_tag
+        if: github.ref == 'refs/heads/dev' || github.ref == 'refs/heads/dockerhub_ci_gke' || github.event.inputs.publish_tag
         uses: actions/upload-artifact@v2
         with:
           name: physionet
@@ -61,7 +67,7 @@ jobs:
 
   publish:
     name: Publish to DockerHub
-    if: github.ref == 'refs/heads/dev' || github.ref == 'refs/heads/dockerhub_ci_ecs' || github.event.inputs.publish_tag
+    if: github.ref == 'refs/heads/dev' || github.ref == 'refs/heads/dockerhub_ci_gke' || github.event.inputs.publish_tag
     environment: dockerhub
     runs-on: ubuntu-latest
     needs: build
@@ -89,35 +95,40 @@ jobs:
           docker push physionet/physionet:${{ github.event.inputs.publish_tag || 'latest' }}
 
   deploy_ecs:
-    name: Deploy ECS
+    name: Deploy GKE
     needs: publish
     environment: dockerhub
     runs-on: ubuntu-latest
-    if: github.ref == 'refs/heads/dockerhub_ci_ecs'
+    if: github.ref == 'refs/heads/dockerhub_ci_gke'
     steps:
-      - name: Configure aws credentials
-        uses: aws-actions/configure-aws-credentials@v1
-        with:
-          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          aws-region: us-east-2
 
-      - name: Update ECS
-        run: |
-          aws ecs describe-task-definition --task-definition physionet --query taskDefinition > task-definition.json
+    - name: Checkout
+      uses: actions/checkout@v2
 
-      - name: Update ECS task definition
-        id: task-def
-        uses: aws-actions/amazon-ecs-render-task-definition@v1
-        with:
-          task-definition: task-definition.json
-          container-name: physionet
-          image: physionet/physionet:${GITHUB_SHA}
+    # Setup gcloud CLI
+    - uses: google-github-actions/setup-gcloud@94337306dda8180d967a56932ceb4ddcf01edae7
+      with:
+        service_account_key: ${{ secrets.GKE_SA_KEY }}
+        project_id: ${{ secrets.GKE_PROJECT }}
 
-      - name: Deploy task definition
-        uses: aws-actions/amazon-ecs-deploy-task-definition@v1
-        with:
-          task-definition: task-definition.json
-          service: physionet-service
-          cluster: physionet-cluster
-          wait-for-service-stability: true
+    # Configure docker to use the gcloud command-line tool as a credential helper
+    - run: |-
+        gcloud --quiet auth configure-docker
+
+    # Get the GKE credentials so we can deploy to the cluster
+    - uses: google-github-actions/get-gke-credentials@fb08709ba27618c31c09e014e1d8364b02e5042e
+      with:
+        cluster_name: ${{ env.GKE_CLUSTER }}
+        location: ${{ env.GKE_ZONE }}
+        credentials: ${{ secrets.GKE_SA_KEY }}
+
+    # Set up kustomize
+    - name: Set up Kustomize
+      run: |-
+        curl --location https://github.com/kubernetes-sigs/kustomize/releases/download/kustomize%2Fv4.2.0/kustomize_v4.2.0_linux_amd64.tar.gz | tar xz
+        chmod u+x ./kustomize
+
+    # Deploy the Docker image to the GKE cluster
+    - name: Deploy
+      run: |-
+        kubectl set image deployment/backend-deployment backend=physionet/physionet:${GITHUB_SHA}
