Improve and refactor code.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -58,6 +58,8 @@ services:
       - test_data:/data:rw
     networks:
       - test
+    depends_on:
+      - gcs
   db:
     image: postgres:13-alpine
     environment:
