Revert "Remove SKIP_GCS_INTEGRATION flag."
This reverts commit 9c600bc494c776e413b9932f7f50f218e209c334.

--- a/.github/workflows/physionet-build-test.yml
+++ b/.github/workflows/physionet-build-test.yml
@@ -17,6 +17,7 @@ jobs:
     container: debian:10
     env:
       DJANGO_SETTINGS_MODULE: physionet.settings.settings
+      TEST_GCS_INTEGRATION: false
       GCS_HOST: localhost
     defaults:
       run:
