--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -78,7 +78,7 @@ services:
 
   gcs:
     image: fsouza/fake-gcs-server
-    command: ["-scheme", "http", "-port", "4443", "-external-url", "http://0.0.0.0:4443", "-backend", "memory"]
+    command: ["-scheme", "http", "-backend", "memory"]
     networks:
       - dev
       - test
