--- a/docker/docker-compose.test.yml
+++ b/docker/docker-compose.test.yml
@@ -25,4 +25,4 @@ services:
 
   gcs:
     image: fsouza/fake-gcs-server
-    command: ["-scheme", "http", "-port", "4443", "-external-url", "http://0.0.0.0:4443", "-backend", "memory"]
+    command: ["-scheme", "http", "-backend", "memory"]
