--- a/pyproject.toml
+++ b/pyproject.toml
@@ -28,6 +28,7 @@ requests-oauthlib = "^1.3.0"
 sentry-sdk = "^1.4.3"
 python-json-logger = "^2.0.2"
 django-storages = { version = "^1.11.1", extras = ["google"] }
+beautifulsoup4 = "4.10.0"
 
 [tool.poetry.dev-dependencies]
 coverage = "^4.4.2"
