Add base provisioning views and logic

--- a/.env.example
+++ b/.env.example
@@ -89,3 +89,6 @@ SITE_NAME=
 EMAIL_SIGNATURE=
 
 ENABLE_RESEARCH_ENVIRONMENTS=
+RESEARCH_ENVIRONMENT_API_URL=
+RESEARCH_ENVIRONMENT_API_JWT_SERVICE_ACCOUNT_PATH=
+RESEARCH_ENVIRONMENT_API_JWT_AUDIENCE=
