--- a/.env.example
+++ b/.env.example
@@ -90,5 +90,5 @@ EMAIL_SIGNATURE=
 
 ENABLE_RESEARCH_ENVIRONMENTS="True"
 RESEARCH_ENVIRONMENT_API_URL="https://example.api"
-RESEARCH_ENVIRONMENT_API_JWT_SERVICE_ACCOUNT_PATH="./physionet-django/environment/api/tests/service_account.json"
+RESEARCH_ENVIRONMENT_API_JWT_SERVICE_ACCOUNT_PATH="environment/api/tests/service_account.json"
 RESEARCH_ENVIRONMENT_API_JWT_AUDIENCE="https://example.com"
